@@ -50,7 +50,7 @@ int	get_proxy_id(struct zbx_json_parse *jp, zbx_uint64_t *hostid, char *host, ch
 
 void	update_proxy_lastaccess(const zbx_uint64_t hostid);
 
-void	get_proxyconfig_data(zbx_uint64_t proxy_hostid, struct zbx_json *j);
+int	get_proxyconfig_data(zbx_uint64_t proxy_hostid, struct zbx_json *j);
 void	process_proxyconfig(struct zbx_json_parse *jp_data);
 
 int	get_host_availability_data(struct zbx_json *j);
